# tailorcv

./: .gitignore  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json
apps/api/: .dockerignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml
apps/api/dependencies/: __init__.py  config.py  database.py  security.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 1907ea36b78e_add_is_onboarded_field_to_users_table.py  b0a75746d298_create_tables.py
apps/api/models/: __init__.py  resume.py  user.py
apps/api/routers/: auth.py  onboarding.py  personal-info.py  user.py
apps/api/schemas/: certification.py  education.py  experience.py  personal_info.py  project.py  resume.py  skill.py  user.py
apps/api/services/: auth.py  onboarding.py  user.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/auth/: page.tsx
apps/web/app/auth/callback/: page.tsx
apps/web/app/auth/debug/: page.tsx
apps/web/app/dashboard/: layout.tsx  page.tsx
apps/web/app/landing/: page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/app/onboarding/components/: CertificationsStep.tsx  EducationStep.tsx  ExperienceStep.tsx  (+6 more)
apps/web/app/types/: global.d.ts
apps/web/components/resume/: ResumeBuilder.tsx  ResumePreview.tsx  ResumeTemplate.tsx
apps/web/hooks/: useApi.ts  useAuth.ts
apps/web/lib/: apiClient.ts  authToken.ts  mockApi.ts  onboardingService.ts
apps/web/lib/resume/: dates.ts  load.ts  schema.ts  selectors.ts
apps/web/lib/types/: job.ts  resume.ts
(+17 files in other folders)
